--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -17,6 +17,31 @@
     height: 100%;
     width: 24.5%;
     background-color: #161C3D;
+    color: #e1e1e1;
+}
+.instrument-content{
+    height: 100%;
+    width: 100%;
+}
+.indtrument-header-container{
+    height: 10%;
+    width: 100%;
+}
+.list-instruments-container{
+    height: 70%;
+    width: 100%;
+}
+.list-instruments-form-container{
+    height: 100%;
+    width: 100%;
+}
+.list-instruments-form-container button{
+    background-color: #E1E1E1;
+    color: #2f2f2f;
+    width: 50%;
+    border-radius: 10px;
+    cursor: pointer;
+    border: #CC34AE 1px solid;
 }
 
 .list-container{
@@ -28,7 +53,8 @@
     height: 10%;
     width: 100%;
     padding: 15px;
-    color: #e1e1e1
+    color: #e1e1e1;
+    position: relative;
 }
 
 .list-content{
@@ -42,7 +68,6 @@
     height: 500px;
     width: 100%;
     flex-wrap: wrap;
-    overflow-y: scroll;
 }
 
 .list-card-container::-webkit-scrollbar-track
@@ -66,10 +91,109 @@
 	background-color: #CC34AE;
 }
 
-.filter-container{
+.filter-icon-container{
     width: 10%;
     height: 100%;
     margin-left: 5%;
+    cursor: pointer;
+}
+.filter-container{
+    display: none;
+    top: 100%;
+    right: 1%;
+    z-index: 5;
+    width: 40%;
+    height: 400px;
+    position: absolute;
+    margin-left: 5%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    animation-name: bounceInDown;
+    -webkit-animation-duration: 1.2s;
+      animation-duration: 2s;
+      -webkit-animation-fill-mode: both;
+      animation-fill-mode: both;
+      -webkit-animation-timing-function: ease-out;
+      animation-timing-function: ease-out;
+}
+
+@-webkit-keyframes bounceInDown { 
+    0% {
+      opacity: 0;
+      transform: translateY(0);
+    }
+    20% {
+        opacity: 1;
+        transform: translateY(-15%);
+    }
+    40% {
+        opacity: 1;
+        transform: translateY(5%);
+    }
+    70% {
+        transform: translateY(-3%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+  }
+
+.status-container{
+    width: 100%;
+    height: 28%;
+    color: #2f2f2f;
+}
+
+.option-status{
+    cursor: pointer;
+    width: 100%;
+}
+.online:hover{
+    background-color: hwb(156 34% 43% / 0.418);
+}
+.preprod:hover{
+    background-color: #f47a078a;
+}
+.progress:hover{
+    background-color: #808f9e5b;
+}
+
+.professeur-container{
+    width: 100%;
+    height: 28%;
+    color: #2f2f2f;
+}
+
+.langue-container{
+    width: 100%;
+    height: 28%;
+    color: #2f2f2f;
+}
+
+.btn-container{
+    width: 100%;
+    height: 10%;
+    cursor: pointer;
+}
+
+.section-title {
+    width: 100%;
+}
+
+.section-title h5{
+    margin: 10% 0 0 10%;
+    color: #808f9e;
+    font-size: 15px;
+}
+
+.btn-container button{
+    width: 100%;
+    height: 100%;
+    background: #CC34AE;
+    color: #ffff;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;
 }
 
 .card{
@@ -79,6 +203,11 @@
     height: 180px;
     width:  200px;
     border-radius: 10px;
+    cursor: pointer;
+}
+
+.card:hover{
+    transform: scale(1.1);
 }
 
 .card h2{
@@ -147,7 +276,12 @@ html {
   box-sizing: inherit;
 }
 
-form {
+.filter-form-container{
+    height: 100%;
+    width: 100%;
+}
+
+.searche-form-container {
     height: auto;
     margin-left: 5%;
     position: relative;
@@ -176,7 +310,7 @@ input[type="search"] {
   position: relative;
   color: var(--color-dark);
 }
-button {
+.searche-form-container button {
   display: none; 
   position: absolute;
   top: 0;
@@ -185,6 +319,7 @@ button {
   font-weight: bold;
   background: var(--color-brand);
   border-radius: 0 var(--rad) var(--rad) 0;
+  cursor: pointer;
 }
 input:not(:placeholder-shown) {
   border-radius: var(--rad) 0 0 var(--rad);
@@ -202,3 +337,171 @@ label {
   width: 1px;
   overflow: hidden;
 }
+
+.select {
+    position: relative;
+    min-width: 200px;
+  }
+  .select svg {
+    position: absolute;
+    right: 12px;
+    top: calc(50% - 3px);
+    width: 10px;
+    height: 6px;
+    stroke-width: 2px;
+    stroke: #9098a9;
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    pointer-events: none;
+  }
+  .select select {
+    -webkit-appearance: none;
+    padding: 7px 40px 7px 12px;
+    width: 100%;
+    border: 1px solid #e8eaed;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0 1px 3px -2px #9098a9;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
+    transition: all 150ms ease;
+  }
+  .select select:required:invalid {
+    color: #5a667f;
+  }
+  .select select option {
+    color: #223254;
+  }
+  .select select option[value=""][disabled] {
+    display: none;
+  }
+  .select select:focus {
+    outline: none;
+    border-color: #cc34ae;
+    box-shadow: 0 2px 0px 1px #cc34ae;
+  }
+  .select select:hover + svg {
+    stroke: #cc34ae;
+  }
+  .sprites {
+    position: absolute;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+    user-select: none;
+  }
+
+  .langue-option-container {
+    height: 40%;
+    --background: #ffffff;
+    --text: #414856;
+    --radio: #7C96B2;
+    --radio-checked: #cc34ae;
+    --radio-size: 20px;
+    --width: 200px;
+    --height: 140px;
+    --border-radius: 10px;
+    background: #e1e1e1;
+    width: var(--width);
+    border-radius: var(--border-radius);
+    color: var(--text);
+    position: relative;
+    box-shadow: 0 10px 30px rgba(65, 72, 86, 0.05);
+    padding: 30px 45px;
+    grid-template-columns: auto var(--radio-size);
+    align-items: center;
+  }
+  .langue-option-container label {
+    cursor: pointer;
+  }
+  .langue-option-container input[type=radio] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    position: relative;
+    height: var(--radio-size);
+    width: var(--radio-size);
+    outline: none;
+    margin: 0;
+    cursor: pointer;
+    border: 2px solid var(--radio);
+    background: transparent;
+    border-radius: 50%;
+    display: grid;
+    justify-self: end;
+    justify-items: center;
+    align-items: center;
+    overflow: hidden;
+    transition: border 0.5s ease;
+  }
+  .langue-option-container input[type=radio]::before, .langue-option-container input[type=radio]::after {
+    content: "";
+    display: flex;
+    justify-self: center;
+    border-radius: 50%;
+  }
+  .langue-option-container input[type=radio]::before {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--background);
+    z-index: 1;
+    opacity: var(--opacity, 1);
+  }
+  .langue-option-container input[type=radio]::after {
+    position: relative;
+    width: calc(100% /2);
+    height: calc(100% /2);
+    background: var(--radio-checked);
+    top: var(--y, 100%);
+    transition: top 0.5s cubic-bezier(0.48, 1.97, 0.5, 0.63);
+  }
+  .langue-option-container input[type=radio]:checked {
+    --radio: var(--radio-checked);
+  }
+  .langue-option-container input[type=radio]:checked::after {
+    --y: 0%;
+    -webkit-animation: stretch-animate 0.3s ease-out 0.17s;
+            animation: stretch-animate 0.3s ease-out 0.17s;
+  }
+  .langue-option-container input[type=radio]:checked::before {
+    --opacity: 0;
+  }
+  .langue-option-container input[type=radio]:checked ~ input[type=radio]::after {
+    --y: -100%;
+  }
+  .langue-option-container input[type=radio]:not(:checked)::before {
+    --opacity: 1;
+    transition: opacity 0s linear 0.5s;
+  }
+  
+  @-webkit-keyframes stretch-animate {
+    0% {
+      transform: scale(1, 1);
+    }
+    28% {
+      transform: scale(1.15, 0.85);
+    }
+    50% {
+      transform: scale(0.9, 1.1);
+    }
+    100% {
+      transform: scale(1, 1);
+    }
+  }
+  
+  @keyframes stretch-animate {
+    0% {
+      transform: scale(1, 1);
+    }
+    28% {
+      transform: scale(1.15, 0.85);
+    }
+    50% {
+      transform: scale(0.9, 1.1);
+    }
+    100% {
+      transform: scale(1, 1);
+    }
+  }
