--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -8,11 +8,13 @@
     height: 100%;
     width: 24.5%;
 }
+
 .list-masterclass-container{
     height: 100%;
     width: 50%;
     background-color: #161C3D;
 }
+
 .instrument-container{
     height: 100%;
     width: 24.5%;
@@ -116,6 +118,54 @@
       -webkit-animation-timing-function: ease-out;
       animation-timing-function: ease-out;
 }
+
+.styled-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.styled-form .styled-field {
+  position: relative;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.styled-form input[type="text"],
+.styled-form input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  font-size: 16px;
+  border-radius: 5px;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.styled-form input[type="text"]::placeholder {
+  color: #999;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.styled-form input[type="submit"] {
+  width: 50%;
+  padding: 10px;
+  font-size: 16px;
+  color: white;
+  background-color: RGB(204, 52, 174);
+  border: none;
+  border-radius: 5px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.styled-form input[type="submit"]:hover {
+  background-color: #444;
+}
+
 
 @-webkit-keyframes bounceInDown { 
     0% {
