--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -192,7 +192,6 @@
   border: 2px #cc34ae solid;
 }
 
-
 @-webkit-keyframes bounceInDown { 
     0% {
       opacity: 0;
@@ -402,7 +401,7 @@ input[type="search"] {
   cursor: pointer;
 }
 input:not(:placeholder-shown) {
-  border-radius: var(--rad) 0 0 var(--rad);
+  border-radius: var(--rad) var(--rad) var(--rad) var(--rad);
   width: calc(100% - var(--btn-width));
   + button {
     display: block;
@@ -590,4 +589,13 @@ label {
     100% {
       transform: scale(1, 1);
     }
+  }
+
+  .logout-btn-container{
+    width: 100%;
+  }
+
+  .logout-btn{
+    cursor: pointer;
+    color: #2f2f2f;
   }
