placeholder login added

--- a/client/pages/login/login.css
+++ b/client/pages/login/login.css
@@ -21,7 +21,7 @@ body {
     display: block;
     font-size: 16px;
     font-weight: bold;
-    color: #333;
+    color: #2f2f2f;
     margin-bottom: 10px;
   }
   
@@ -56,4 +56,3 @@ body {
   .login-form .form-button:hover {
     background-color: #a22f8c;
   }
-  
